# gotman_1982

./: CITATION.cff  Dockerfile  LICENSE  README.md
gotman_1982/: README.md  pyproject.toml
gotman_1982/src/gotman_1982/: __main__.py  gotman.py  main.py
